trackeditor: replace java 11 isBlank() with trim().isEmpty()
git-svn-id: https://svn.code.sf.net/p/speed-dreams/code/trunk@8533 30fe4595-0a0c-4342-8851-515496e4dcbd

Former-commit-id: 1bb69079e0eb6874c17e2fc14a23ad6dde5416d1
Former-commit-id: 450dd6fd8a690b47e92cb3cb5948d33bce9cf0b8